[metadata]
name = llama_farm
description = Use a locally hosted large language model or OpenAI to chat over your documents, summarize URLs, youtube transcripts etc.
url = https://github.com/atisharma/llama_farm
author = Ati Sharma
author_email = ati+llama_farm@agalmic.ltd
keywords = llama, llm, 
license = GPL-3
license_file = LICENSE
long_description = file: README.md

[options]
python_requires = >= 3.10
install_requires = file: requirements.txt
include_package_data = True
package_dir = 
packages = find:

[options.extras_require]
torch = file: torch-requirements.txt

[options.entry_points]
console_scripts =
    llama-farm = llama_farm.repl:run
    ingest = llama_farm.parser:_ingest

[options.packages.find]
where = 

[options.package_data]
* = *.hy, *.md
